# scrapy-howto

./: .gitignore  LICENSE  README.md  README.rst
podtags/: .coveragerc  ChangeLog  README.rst  scrapy.cfg  setup.cfg  setup.py  tox.ini
podtags/doc/: Makefile
podtags/doc/source/: conf.py  index.rst  podtags.rst  podtags.spiders.rst
podtags/docs/source/: conf.py  index.rst
podtags/podtags/: items.py  pipelines.py  settings.py
podtags/podtags/spiders/: podbay.py
podtags/podtags/words/: __init__.py  common-words.txt
podtags/tests/: test_spiders.py
podtags/tests/responses/podbay/: 123456789.html  directory.html  reviews.html  server.py
