# -*- coding: utf-8 -*-
[metadata]
name = scrapy-howto-podtags
summary = Podtags is a part of a Scrapy howto
description-file = README.rst
author = Benjamin Debouté

[files]
packages =
    podtags

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pytest]
python_files = test_*.py
addopts = --doctest-modules --assert=plain
twisted = 1
