# -*- coding: utf-8 -*-
[metadata]
name = scrapy-howto-podtags
summary = Podtags is a part of a Scrapy howto
description-file = README.rst
author = Benjamin Debouté

[files]
packages =
    podtags

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

# package has no vocation to be distributed on pypi
#[upload_sphinx]
#upload-dir = docs/build/html/sphinx

[global]
setup-hooks =
    pbr.hooks.setup_hook

[nosetests]
verbosity = 1
detailed-errors = 1
# coverage is executed by tox
# configuration is in .coveragerc
#with-coverage = 1
#cover-package = podtags
#cover-erase = 1
#cover-min-percentage = 95
#cover-html = 1
#cover-html-dir = docs/build/html/coverage
#cover-branches = 1
#cover-xml = 1
#cover-xml-file = docs/build/html/coverage/podtags_coverage.xml

[flake8]
ignore = E121,E125
